--- a/content/post/2015-07-23-r-rmarkdown.Rmd
+++ b/content/post/2015-07-23-r-rmarkdown.Rmd
@@ -1,37 +1,33 @@
 ---
-title: "Hello R Markdown"
-author: "Frida Gomam"
-date: 2015-07-23T21:13:14-05:00
+title: "Time Series"
+author: "Andrew Gehman"
+date: 2017-07-23T21:13:14-05:00
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(collapse = TRUE)
+The x axis represents time, while the y is variable of your choice. First we load the libraries
+
+```
+library(Lahman)
+library(sqldf)
+library(devtools)
+library(ggplot2)
+```
+Then we must extract the data, in order to get the time series. 
+
+```
+query<-"SELECT yearID,HR FROM Batting WHERE playerID='ruthba01'"
+
+result<-sqldf(query)
+
+
+ggplot()+
+  geom_point(data=result,aes(x=yearID,y=HR),color="black")+
+  geom_line(data=result,aes(x=yearID,y=HR),color="blue")+
+  ggtitle("Ruth's Homerun Totals Through the Years")+
+  xlab("Year")+
+  ylab("Homeruns")
 ```
 
-# R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-fit <- lm(dist ~ speed, data = cars)
-fit
-```
-
-# Including Plots
-
-You can also embed plots. See Figure \@ref(fig:pie) for example:
-
-```{r pie, fig.cap='A fancy pie chart.', tidy=FALSE}
-par(mar = c(0, 1, 0, 1))
-pie(
-  c(280, 60, 20),
-  c('Sky', 'Sunny side of pyramid', 'Shady side of pyramid'),
-  col = c('#0292D8', '#F7EA39', '#C4B632'),
-  init.angle = -50, border = NA
-)
-```
+![](https://hutton.netlify.com/post/2017-10-10-time-series_files/figure-html/unnamed-chunk-2-1.png)
