--- a/content/post/2017-12-16-bar-plots.md
+++ b/content/post/2017-12-16-bar-plots.md
@@ -11,3 +11,34 @@ tags:
   - regression
   - Bar Plot
 ---
+
+Here I will explain how to create bar plots in R Studio using the Lahman Baseball Package as an example. 
+
+First we must load the libraries:
+
+```
+library(Lahman)
+library(sqldf)
+library(devtools)
+library(ggplot2)
+``` 
+
+Next, we must extract the data. 
+```
+query<-"SELECT name,HR FROM Teams WHERE yearID=1980
+ORDER BY HR"
+result<-sqldf(query)
+
+result$name<-factor(result$name,levels=result$name)
+
+
+ggplot()+
+  geom_bar(data=result,aes(x=name,y=HR),stat='identity',
+           color='blue',fill='black')+
+  coord_flip()+
+  xlab("Team Name")+
+  ylab("Homeruns")+
+  ggtitle("1980 Team Homerun Distribution")
+```   
+
+![](https://hutton.netlify.com/post/2017-10-10-bar-plot_files/figure-html/unnamed-chunk-2-1.png)
